# web-interact

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  web-interact
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  llm-guide.txt
cli/src/: commands.rs  connection.rs  daemon.rs  main.rs  paths.rs  skill.rs
daemon/: package.json
daemon/src/: browser-manager-pages.test.ts  browser-manager-title-timeout.test.ts  browser-manager.ts  daemon.ts  local-endpoint.test.ts  local-endpoint.ts  patchright-workarounds.ts  protocol.ts  temp-files.ts
daemon/src/sandbox/: host-bridge.ts  playwright-internals.ts  quickjs-host.ts  quickjs-sandbox.ts  script-runner-quickjs.ts
daemon/src/sandbox/__tests__/: auto-connect.test.ts  forked-client-bundle.test.ts  named-pages.test.ts  playwright-api.test.ts  protocol-bridge.test.ts  quickjs-host.test.ts  sandbox-file-io.test.ts  sandbox-integration.test.ts  sandbox-security.test.ts
daemon/src/sandbox/dom/: accessibility.ts  actions.ts  cdp-actions.ts  dialog-handler.ts  index.ts  listeners.ts  network-settle.ts  overlap-filter.ts  selectors.ts  serialize.ts  service.ts  shadow-access.ts  snapshot.ts  types.ts
daemon/src/sandbox/forked-client/: README.md
daemon/src/sandbox/forked-client/src/client/: artifact.ts  browser.ts  (+10 more)
scripts/: check-repo-policy.js  sync-version.js
(+1 files in other folders)
